Fix the logo on the navbar that was too big on mobile screen seize

--- a/style.css
+++ b/style.css
@@ -307,6 +307,34 @@ li {
   }
 
   #logo {
-    width: 200px;
+    width: 150px;
+  }
+
+  .burger {
+    width: 24px;
+    height: 2px;
+    background-color: rgba(255, 255, 255, 0.575);
+    position: relative;
+  }
+
+  .burger::before {
+    top: -5px;
+  }
+
+  .burger::after {
+    top: 5px;
+
+  }
+}
+
+@media screen and (max-width: 480px) {
+  #logo {
+    width: 100px !important;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  #logo {
+    width: 80px;
   }
 }
